<resources>
    <string name="app_name">Previemos</string>
    <string name="facebook_app_id">296013304353741</string>
    <string name="fb_login_protocol_scheme">fb296013304353741</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="like_button_text">Me gusta</string>
    <string name="other_previa_picture">Fotografia de la previa</string>
    <string name="search_previas">Buscar previas</string>
    <string name="user_profile">Perfil del usuario</string>
    <string name="log_out">Cerrar sesion</string>
    <string name="hint_new_previa">Ponele un nombre a tu previa</string>
    <string name="location_of_previa">Ubicación</string>
    <string name="glasses">Vasos</string>
    <string name="speakers_and_music">Música</string>
    <string name="Drinks">Bebidas</string>
    <string name="Cokes_and_not_alcohol">Gaseosas</string>
    <string name="private_previa">Solo invitados</string>
    <string name="marca_lo_que_ya_tenes_en_tu_previa">Marca lo que ya tenes en tu previa</string>
    <string name="foto_de_la_previa">Foto de la previa</string>

</resources>
